TS-3797: Crashes due to cross-thread race conditions.